--- a/assets/stylish/components/_accordion.scss
+++ b/assets/stylish/components/_accordion.scss
@@ -1,12 +1,14 @@
-/* Accordion setup */
+/* ACCORDION */
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 
 .accordion{
   .a_head{
     background-color: $acc_head_color; padding: $acc_head_padding; cursor: pointer;
-    i.a_state{ float: right}
-    &.active i.a_state{@include rotate(180deg);}
+    .a_state{ float: right}
+    &.active{
+      .a_state{@include rotate(180deg);}
+    }
   }
   .a_content{
     display: none; background-color: $acc_content_color; padding: $acc_content_padding;
