--- a/assets/stylish/global/_icons.scss
+++ b/assets/stylish/global/_icons.scss
@@ -1,4 +1,4 @@
-/* STYLISH ICONS SETUP */
+/* ICONS */
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 
