--- a/assets/stylish/global/grid/_grid_fixed.scss
+++ b/assets/stylish/global/grid/_grid_fixed.scss
@@ -1,4 +1,4 @@
-/* SETUP FIXED SIDEBAR GRID */
+/* GRID FIXED */
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 
