--- a/assets/stylish/layout/_common.scss
+++ b/assets/stylish/layout/_common.scss
@@ -1,4 +1,4 @@
-/* COMMON STUFF */
+/* COMMON */
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 
@@ -6,6 +6,11 @@
 .grid_correction{
   @include grid_generate();
 }
+
+
+
+
+
 
 
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
