--- a/assets/stylish/layout/magento/_cart.scss
+++ b/assets/stylish/layout/magento/_cart.scss
@@ -1,4 +1,4 @@
-/* CART LAYOUT */
+/* CART */
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 
