--- a/assets/stylish/layout/magento/_checkout.scss
+++ b/assets/stylish/layout/magento/_checkout.scss
@@ -1,4 +1,4 @@
-/* CHECKOUT LAYOUT */
+/* CHECKOUT */
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 
