--- a/assets/stylish/components/_divider.scss
+++ b/assets/stylish/components/_divider.scss
@@ -1,8 +1,15 @@
-/* Divider setup */
+/* DIVIDER AND SPACER */
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 
-/* Content divider with top and bottom margin classes */
+// Divider
 .divider{
   border-bottom: $divider_border_size $divider_border_style $divider_border_color; width: 100%; display: block;
+  @include move();
+}
+
+
+//Spacer
+.spacer{
+  @include move();
 }
