--- a/assets/stylish/components/_modal.scss
+++ b/assets/stylish/components/_modal.scss
@@ -1,11 +1,5 @@
-/* Modal window setup */
+/* MODAL */
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
-
-
-html.modal_active{
-  overflow-y: hidden;-webkit-overflow-scrolling:touch; position: absolute; height: 100%; width: 100%;
-  body{overflow-y: hidden;-webkit-overflow-scrolling:touch; position: absolute; height: 100%; width: 100%;}
-}
 
 
 .modal{
@@ -73,4 +67,11 @@ html.modal_active{
       .m_content{height: 100%;margin-top: 0!important}
     }
   }
+}
+
+
+// Remove scroll on all platforms
+html.modal_active{
+  overflow-y: hidden;-webkit-overflow-scrolling:touch; position: absolute; height: 100%; width: 100%;
+  body{overflow-y: hidden;-webkit-overflow-scrolling:touch; position: absolute; height: 100%; width: 100%;}
 }
