--- a/assets/stylish/components/_msg.scss
+++ b/assets/stylish/components/_msg.scss
@@ -1,4 +1,4 @@
-/* Messages block setup */
+/* MESSAGES */
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 
