--- a/assets/stylish/global/_typography.scss
+++ b/assets/stylish/global/_typography.scss
@@ -1,4 +1,4 @@
-/* GENERAL FONT DECLARATION */
+/* TYPOGRAPHY */
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 
@@ -13,14 +13,14 @@
 /* Setup Global Typography */
 html {font-size: $body_base_size;}
 body {color:$body_txt_color; background:$body_bg_color; font-family:$body_font_family; @include font-smoothing();}
-h1   {@include font_style($h1, ($h1+$lh) )}
-h2   {@include font_style($h2, ($h2+$lh) )}
-h3   {@include font_style($h3, ($h3+$lh) )}
-h4   {@include font_style($h4, ($h4+$lh) )}
-h5   {@include font_style($h5, ($h5+$lh) )}
-h6   {@include font_style($h6, ($h6+$lh) )}
-p,
-ul li{@include font_style($p, $p+$lh)}
+h1   {@include font_style($h1, $h1lh )}
+h2   {@include font_style($h2, $h2lh )}
+h3   {@include font_style($h3, $h3lh )}
+h4   {@include font_style($h4, $h4lh )}
+h5   {@include font_style($h5, $h5lh )}
+h6   {@include font_style($h6, $h6lh )}
+p, li{@include font_style($p , $plh)}
+
 a:not(.btn) {
   @include link_color($link_color, $link_color_hover, none, pointer);
   @include transition-property(color);
@@ -37,25 +37,23 @@ a:not(.btn) {
 /* Setup content style for large texts */
 .content_style{
 
-  $cs_plh: ($cs_p+$cs_lh);
-
   //Headers and paragraph
-  #{headers()}{ margin-bottom: 5px; }
-  h1   {@include font_style($cs_h1, ($cs_h1+$cs_lh) )}
-  h2   {@include font_style($cs_h2, ($cs_h2+$cs_lh) )}
-  h3   {@include font_style($cs_h3, ($cs_h3+$cs_lh) )}
-  h4   {@include font_style($cs_h4, ($cs_h4+$cs_lh) )}
-  h5   {@include font_style($cs_h5, ($cs_h5+$cs_lh) )}
-  h6   {@include font_style($cs_h6, ($cs_h6+$cs_lh) )}
-  p    {@include font_style($cs_p, $cs_plh); margin-bottom:$cs_margin;}
+  #{headers()}{ margin-bottom: $cs_move_headers; }
+  h1   {@include font_style($cs_h1, $cs_h1lh )}
+  h2   {@include font_style($cs_h2, $cs_h2lh )}
+  h3   {@include font_style($cs_h3, $cs_h3lh )}
+  h4   {@include font_style($cs_h4, $cs_h4lh )}
+  h5   {@include font_style($cs_h5, $cs_h5lh )}
+  h6   {@include font_style($cs_h6, $cs_h6lh )}
+  p    {@include font_style($cs_p,  $cs_plh); margin-bottom:$cs_move;}
 
   //Lists
   ul, ol {
-    overflow: hidden; margin-left:0; margin-bottom: $cs_margin;
-    li{@include font_style($p, $cs_plh); margin-bottom: 5px}
+    overflow: hidden; margin-left:0; margin-bottom: $cs_move;
+    li{@include font_style($p, $cs_plh); margin-bottom: $cs_move_li}
   }
-  ul li { margin-left:$cs_margin+10px;}
-  ol li { margin-left:$cs_margin+20px;@include font_style($p, $cs_plh)}
+  ul li { margin-left:$cs_move+10px;}
+  ol li { margin-left:$cs_move+20px;@include font_style($p, $cs_plh)}
 
   //Common
   address{@include font_style($p, $cs_plh)}
@@ -67,10 +65,10 @@ a:not(.btn) {
   //Images and iframe
   img,
   iframe{
-    width: auto; height: auto; max-width: 100%; margin-bottom:$cs_margin;
+    width: auto; height: auto; max-width: 100%; margin-bottom:$cs_move;
 
-    &.alignleft {clear: left;float: left;margin-right:$cs_margin;}
-    &.alignright {clear: right;float: right;margin-left:$cs_margin;}
+    &.alignleft {clear: left;float: left;margin-right:$cs_move;}
+    &.alignright {clear: right;float: right;margin-left:$cs_move;}
 
     //Image full width
     &.full{width: 100%; height: auto;}
