--- a/assets/stylish/layout/_content.scss
+++ b/assets/stylish/layout/_content.scss
@@ -1,4 +1,4 @@
-/* MAIN CONTENT LAYOUT */
+/* CONTENT */
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 
