--- a/assets/stylish/layout/_header.scss
+++ b/assets/stylish/layout/_header.scss
@@ -1,4 +1,4 @@
-/* HEADER LAYOUT */
+/* HEADER */
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 
