--- a/assets/stylish/layout/magento/_category.scss
+++ b/assets/stylish/layout/magento/_category.scss
@@ -1,3 +1,3 @@
-/* CATEGORY LAYOUT */
+/* CATEGORY */
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
