--- a/assets/stylish/layout/magento/_customer.scss
+++ b/assets/stylish/layout/magento/_customer.scss
@@ -1,4 +1,4 @@
-/* CUSTOMER LAYOUT */
+/* CUSTOMER */
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
 
