--- a/assets/stylish/layout/magento/_product.scss
+++ b/assets/stylish/layout/magento/_product.scss
@@ -1,3 +1,3 @@
-/* PRODUCT LAYOUT */
+/* PRODUCT */
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
