--- a/assets/stylish/layout/wordpress/_error.scss
+++ b/assets/stylish/layout/wordpress/_error.scss
@@ -1,3 +1,3 @@
-/* 404 ERROR LAYOUT */
+/* ERROR */
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
 
