--- a/assets/stylish/mixins/_mixins_project.scss
+++ b/assets/stylish/mixins/_mixins_project.scss
@@ -1,2 +1,2 @@
-/* PROJECT MIXINS STYLES */
+/* PROJECT MIXINS */
 /* ---------------------------------------------------------------------------------------------------------------------------------- */
